2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  When showing what we're processing, show module name and file name.
	* test_expected/test1:
	* test_expected/test1-2.3:
	* test_expected/test1-2.4:
	* test_expected/test1-2.5:
	* test_expected/test10:
	* test_expected/test100:
	* test_expected/test101:
	* test_expected/test11:
	* test_expected/test12:
	* test_expected/test13:
	* test_expected/test14:
	* test_expected/test15:
	* test_expected/test16:
	* test_expected/test17:
	* test_expected/test17-2.4:
	* test_expected/test18:
	* test_expected/test19:
	* test_expected/test2:
	* test_expected/test20:
	* test_expected/test20-2.4:
	* test_expected/test20-2.5:
	* test_expected/test21:
	* test_expected/test22:
	* test_expected/test23:
	* test_expected/test24:
	* test_expected/test25:
	* test_expected/test26:
	* test_expected/test27:
	* test_expected/test27-2.2:
	* test_expected/test27-2.3:
	* test_expected/test27-2.4:
	* test_expected/test27-2.5:
	* test_expected/test28:
	* test_expected/test29:
	* test_expected/test3:
	* test_expected/test3-2.2:
	* test_expected/test3-2.3:
	* test_expected/test3-2.4:
	* test_expected/test3-2.5:
	* test_expected/test30:
	* test_expected/test31:
	* test_expected/test32:
	* test_expected/test33:
	* test_expected/test34:
	* test_expected/test34-2.2:
	* test_expected/test34-2.3:
	* test_expected/test34-2.4:
	* test_expected/test34-2.5:
	* test_expected/test35:
	* test_expected/test36:
	* test_expected/test37:
	* test_expected/test38:
	* test_expected/test39:
	* test_expected/test39-2.2:
	* test_expected/test39-2.3:
	* test_expected/test39-2.4:
	* test_expected/test39-2.5:
	* test_expected/test4:
	* test_expected/test40:
	* test_expected/test41:
	* test_expected/test42:
	* test_expected/test43:
	* test_expected/test44:
	* test_expected/test45:
	* test_expected/test46:
	* test_expected/test47:
	* test_expected/test48:
	* test_expected/test49:
	* test_expected/test5:
	* test_expected/test50: